--- a/LAB1/readme
+++ b/LAB1/readme
@@ -1,1 +1,5 @@
+LAB01 QUESTIONS:
 
+1. Count the number of vowels.
+2. Count the number of blank spaces.
+3. Separate stop words and other words in a sentence.
