--- a/LAB2/readme
+++ b/LAB2/readme
@@ -1,1 +1,4 @@
+LAB02
 
+1. Write a lex program to convert the for loop to while loop.
+2. Write a lex program to convert macro definition to function definition.
