--- a/LAB1/readme
+++ b/LAB1/readme
@@ -1,5 +1,5 @@
 LAB01 QUESTIONS:
 
-1. Count the number of vowels.
-2. Count the number of blank spaces.
-3. Separate stop words and other words in a sentence.
+1. Write a lex program to count the number of vowels.
+2. Write a lex progra to count the number of blank spaces.
+3. Write a lex program to separate stop words and other words in a sentence.
