--- a/LAB3/readme
+++ b/LAB3/readme
@@ -1,1 +1,5 @@
 
+LAB03 QUESTIONS:
+
+1. Write a lex program to convert infix to postfix expression.
+2. Write a lex program to detect and correct errors in datatypes.
