--- a/LAB6/readme
+++ b/LAB6/readme
@@ -1,1 +1,5 @@
 
+LAB06 QUESTIONS:
+
+1. Write a lex program to convert structures defined in C language to classes in C++ language.
+2. Write a lex program to convert I/O statements defined in C language to I/O statements in C++ language.
