--- a/LAB11/readme
+++ b/LAB11/readme
@@ -1,1 +1,4 @@
+LAB 11 QUESTIONS:
 
+1. Write a lex and yacc program to implement a basic calculator and recognise valid arithmetic expression.
+2. Write a lex and yacc program to validate for/while loop construct by writing grammar rules.
