--- a/LAB15/readme
+++ b/LAB15/readme
@@ -1,1 +1,6 @@
 
+LAB 15 QUESTIONS:
+
+INTERMEDIATE CODE GENERATION:
+
+1. Write a lex and yacc program to convert control statment to three address code.
